Stuff setup for coding, yippee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(threepp_imgui_demo)
 
 set(CMAKE_CXX_STANDARD 20)
 
+option(SIM_BUILD_TESTS "Build Tests" ON)
+
 include(FetchContent)
 
 set(THREEPP_BUILD_TESTS OFF)
@@ -14,23 +16,20 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(threepp)
 
-add_subdirectory(external)
-
-add_executable(threepp_demo main.cpp)
-target_link_libraries(threepp_demo PRIVATE threepp::threepp imgui::imgui)
-
-
-######### Emscripten #######
-# This part is only needed if you want to compile to a WEB application
-if (DEFINED EMSCRIPTEN)
-
-    set(LINK_FLAGS " --bind -sUSE_GLFW=3 -sGL_DEBUG=1 -sMIN_WEBGL_VERSION=2 -sMAX_WEBGL_VERSION=2 \
-    -sFULL_ES3 -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASM=1")
-
-    set_target_properties("demo"
-            PROPERTIES SUFFIX ".html"
-            LINK_FLAGS "${LINK_FLAGS}"
+if(SIM_BUILD_TESTS)
+    FetchContent_Declare(
+            Catch2
+            GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+            GIT_TAG v3.7.1
     )
+    FetchContent_MakeAvailable(Catch2)
+    enable_testing()
+    add_subdirectory(tests)
+endif()
 
-endif ()
-###########################
+add_subdirectory(external)
+include_directories("${CMAKE_SOURCE_DIR}/include")
+add_subdirectory(src)
+
+add_executable(IK-Sim main.cpp)
+target_link_libraries(IK-Sim PRIVATE iklib threepp::threepp imgui::imgui)
