Namespacing and headers

--- a/src/ik-lib/math/CMakeLists.txt
+++ b/src/ik-lib/math/CMakeLists.txt
@@ -3,3 +3,5 @@ add_library(iklib-math
         Vector4.cpp
         Matrix4.cpp
 )
+
+target_include_directories(iklib-math PRIVATE "${CMAKE_SOURCE_DIR}/include/ik-lib/math")
