IK Algos library inserted, other stuff adjusted, work can begin

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -11,3 +11,5 @@ target_sources(imgui PRIVATE
 )
 target_link_libraries(imgui PRIVATE glfw)
 target_include_directories(imgui PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/imgui")
+
+add_subdirectory("ik-algorithms")
