--- a/src/ik-lib/CMakeLists.txt
+++ b/src/ik-lib/CMakeLists.txt
@@ -7,4 +7,4 @@ add_library(iklib
 add_subdirectory(math)
 
 target_include_directories(iklib PRIVATE "${CMAKE_SOURCE_DIR}/include/ik-lib")
-target_link_libraries(iklib iklib-math)
+target_link_libraries(iklib PRIVATE iklib-math)
