--- a/src/simulation/CMakeLists.txt
+++ b/src/simulation/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(simulation
 
 target_include_directories(simulation PRIVATE "${CMAKE_SOURCE_DIR}/include")
 target_include_directories(simulation PRIVATE "${CMAKE_SOURCE_DIR}/include/simulation")
-target_link_libraries(simulation PRIVATE threepp::threepp imgui::imgui)
+target_link_libraries(simulation PRIVATE threepp::threepp imgui::imgui ik-algorithms)
