Lots of everything but there is a simulation now

--- a/src/simulation/CMakeLists.txt
+++ b/src/simulation/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(simulation
-    Crane.cpp
+        Crane.cpp
 )
 
-target_include_directories(simulation PRIVATE "${CMAKE_SOURCE_DIR}/include")
+target_include_directories(simulation PUBLIC "${CMAKE_SOURCE_DIR}/include")
 target_include_directories(simulation PRIVATE "${CMAKE_SOURCE_DIR}/include/simulation")
 target_link_libraries(simulation PRIVATE threepp::threepp imgui::imgui ik-algorithms)
