Trying to make tracers

--- a/src/simulation/CMakeLists.txt
+++ b/src/simulation/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(simulation
         Crane.cpp
         Simulation.cpp
+        Tracer.cpp
 )
 
 target_include_directories(simulation PUBLIC "${CMAKE_SOURCE_DIR}/include")
