--- a/src/ik-algorithms-3d/CMakeLists.txt
+++ b/src/ik-algorithms-3d/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_library(ik-algorithms-3d
         CCD3.cpp
         IKSolver3.cpp
+        Skeleton3.cpp
 )
 
-target_link_libraries(ik-algorithms-3d PRIVATE threepp ik-algorithms)
+target_include_directories(ik-algorithms-3d PUBLIC "${CMAKE_SOURCE_DIR}/include")
 target_include_directories(ik-algorithms-3d PRIVATE "${CMAKE_SOURCE_DIR}/include/ik-algorithms-3d")
+target_link_libraries(ik-algorithms-3d PRIVATE threepp ik-algorithms)
