project doesnt build, shit shelved

--- a/src/ik-algorithms-3d/CMakeLists.txt
+++ b/src/ik-algorithms-3d/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_library(ik-algorithms-3d
+        Leg.cpp
+        Skeleton3.cpp
         CCD3.cpp
         IKSolver3.cpp
-        Skeleton3.cpp
 )
 
 target_include_directories(ik-algorithms-3d PUBLIC "${CMAKE_SOURCE_DIR}/include")
